[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/Enemies/Enemy_projectile.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/Enemy_Projectile.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Enemies/Enemy_Projectile.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Trail.gd" type="Script" id=4]
[ext_resource path="res://SoundEffects/Perry_SEs_CrystalShatter.wav" type="AudioStream" id=5]
[ext_resource path="res://SoundEffects/forceField_002.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 11.1753

[node name="Enemy_Projectile" type="Area2D"]
position = Vector2( 94.1974, -0.182907 )
collision_layer = 128
collision_mask = 747
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 0.5 )
z_index = 1
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.4, 1.3, 1.4, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, 20 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 100 )

[node name="Trail" type="Particles2D" parent="."]
modulate = Color( 1.4, 1.3, 1.4, 1 )
z_index = -1
amount = 32
lifetime = 0.5
local_coords = false
process_material = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ShatterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
bus = "SoundEffects"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -14.0
pitch_scale = 1.3
bus = "SoundEffects"

[connection signal="area_entered" from="." to="." method="_on_Enemy_Projectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_Projectile_body_entered"]
